trip update delete members
