# docs/swagger.json
@@ -1000,6 +1000,102 @@
                 }
             }
         },
+        "/api/v1/trip/member": {
+            "post": {
+                "description": "Update member access for trip",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "invite"
+                ],
+                "summary": "Update member access",
+                "parameters": [
+                    {
+                        "description": "Member access data",
+                        "name": "event",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.UpdateMemberRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Update member access for trip",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "invite"
+                ],
+                "summary": "Update member access",
+                "parameters": [
+                    {
+                        "description": "Member data",
+                        "name": "event",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.DeleteMemberRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/trip/place": {
             "post": {
                 "description": "Add a place to a specific trip by their IDs",
@@ -1788,6 +1884,21 @@
                 }
             }
         },
+        "handler.DeleteMemberRequest": {
+            "type": "object",
+            "required": [
+                "member_id",
+                "trip_id"
+            ],
+            "properties": {
+                "member_id": {
+                    "type": "integer"
+                },
+                "trip_id": {
+                    "type": "string"
+                }
+            }
+        },
         "handler.DisableInvitationRequest": {
             "type": "object",
             "required": [
@@ -1868,6 +1979,25 @@
                     "type": "string"
                 },
                 "start_time": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.UpdateMemberRequest": {
+            "type": "object",
+            "required": [
+                "access",
+                "member_id",
+                "trip_id"
+            ],
+            "properties": {
+                "access": {
+                    "type": "string"
+                },
+                "member_id": {
+                    "type": "integer"
+                },
+                "trip_id": {
                     "type": "string"
                 }
             }
